crates/query-engine/translation/tests/snapshots/tests__mutations__v1_insert.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ WRITE;

WITH "%0_generated_mutation" AS (
  INSERT INTO
    "public"."Artist"("ArtistId", "Name")
  VALUES
    (276, cast($1 as varchar)) RETURNING *
)
SELECT
  json_build_object('result', row_to_json("%2_universe"), 'type', $2) AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%3_returning")), '[]') AS "returning"
        FROM
          (
            SELECT
              "%1_v1_insert_Artist"."ArtistId" AS "artist_id",
              "%1_v1_insert_Artist"."Name" AS "name"
            FROM
              "%0_generated_mutation" AS "%1_v1_insert_Artist"
          ) AS "%3_returning"
      ) AS "%3_returning"
      CROSS JOIN (
        SELECT
          COUNT(*) AS "affected_rows"
        FROM
          "%0_generated_mutation" AS "%1_v1_insert_Artist"
      ) AS "%4_aggregates"
  ) AS "%2_universe";

[[(1, String("Olympians")), (2, String("procedure"))]]
