crates/query-engine/translation/tests/snapshots/tests__mutations__v2_insert.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
BEGIN
ISOLATION LEVEL READ COMMITTED READ WRITE;

WITH "%0_generated_mutation" AS (
  INSERT INTO
    "public"."Artist"("ArtistId", "Name")
  VALUES
    (276, cast($1 as "pg_catalog"."varchar")),
    (DEFAULT, cast($2 as "pg_catalog"."varchar")) RETURNING *,
    false AS "%check__constraint"
)
SELECT
  (
    SELECT
      json_build_object('result', row_to_json("%4_universe"), 'type', $3) AS "universe"
    FROM
      (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%5_returning")), '[]') AS "returning"
            FROM
              (
                SELECT
                  "%1_Artist"."ArtistId" AS "artist_id",
                  "%1_Artist"."Name" AS "name"
                FROM
                  "%0_generated_mutation" AS "%1_Artist"
              ) AS "%5_returning"
          ) AS "%5_returning"
          CROSS JOIN (
            SELECT
              COUNT(*) AS "affected_rows"
            FROM
              (
                SELECT
                  "%2_Artist".*
                FROM
                  "%0_generated_mutation" AS "%2_Artist"
              ) AS "%3_Artist"
          ) AS "%6_aggregates"
      ) AS "%4_universe"
  ) AS "%results",
  (
    SELECT
      coalesce(
        bool_and("%7_v2_insert_Artist"."%check__constraint"),
        true
      ) AS "%check__constraint"
    FROM
      "%0_generated_mutation" AS "%7_v2_insert_Artist"
  ) AS "%check__constraint";

COMMIT;

[[(1, String("Olympians")), (2, String("The Other Band")), (3, String("procedure"))]]
