crates/query-engine/translation/tests/snapshots/tests__mutations__v2_insert_empty_objects.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
BEGIN
ISOLATION LEVEL READ COMMITTED READ WRITE;

WITH "%0_generated_mutation" AS (
  INSERT INTO
    "public"."Dog"
  SELECT
  FROM
    generate_series(1, 4) RETURNING *,
    true AS "%check__constraint"
)
SELECT
  (
    SELECT
      json_build_object('result', row_to_json("%5_universe"), 'type', $1) AS "universe"
    FROM
      (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%6_returning")), '[]') AS "returning"
            FROM
              (
                SELECT
                  "%2_Dog"."id" AS "id",
                  "%2_Dog"."adopter_name" AS "adopter_name"
                FROM
                  (
                    SELECT
                      "%1_Dog".*
                    FROM
                      "%0_generated_mutation" AS "%1_Dog"
                  ) AS "%2_Dog"
              ) AS "%6_returning"
          ) AS "%6_returning"
          CROSS JOIN (
            SELECT
              COUNT(*) AS "affected_rows"
            FROM
              (
                SELECT
                  "%3_Dog".*
                FROM
                  "%0_generated_mutation" AS "%3_Dog"
              ) AS "%4_Dog"
          ) AS "%7_aggregates"
      ) AS "%5_universe"
  ) AS "%results",
  (
    SELECT
      coalesce(
        bool_and("%8_v2_insert_Dog"."%check__constraint"),
        true
      ) AS "%check__constraint"
    FROM
      "%0_generated_mutation" AS "%8_v2_insert_Dog"
  ) AS "%check__constraint";

COMMIT;

[[(1, String("procedure"))]]
